--- a/main.html
+++ b/main.html
@@ -8,6 +8,82 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-	
-	</body>
+	     <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+    >
+      Sign Up
+    </button>
+
+    <div class="modal" id="exampleModal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Create Account</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            >X</button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group mb-2">
+                <label for="email">Enter address</label>
+                <input
+                  type="email"
+                  id="email"
+                  class="form-control mt-2"
+                  placeholder="Enter email"
+                />
+                <small id="passwordHelpBlock" class="form-text text-muted">
+                  Your information is safe with us.
+                </small>
+              </div>
+              <div class="form-group mb-3">
+                <label for="password">Password</label>
+                <input
+                  type="password"
+                  id="password"
+                  class="form-control mt-2"
+                  placeholder="Password"
+                />
+              </div>
+              <div class="form-group mb-3">
+                <label for="confirmpassword">Confirm Password</label>
+                <input
+                  type="confirmpassword"
+                  id="confirmPassword"
+                  class="form-control mt-2"
+                  placeholder="Confirm Password"
+                />
+              </div>
+              <!-- <div class="text-end mt-3">
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div> -->
+            </form>
+          </div>
+          <div class="modal-footer">
+            <!-- <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button> -->
+            <button type="button" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+	<script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./script.js" type="text/javascript"></script>
+  </body>
 </html>
